# tiny-competition-infra

./: .env  .gitignore  README.md  docker-compose.yaml
evalapp/: Makefile  README.md  app.py  pyproject.toml
evalapp/evalapp/: controller.py  data.py  metrics.py
evalapp/tests/: conftest.py  test_api.py
mlflow/: Dockerfile  entrypoint.sh
mlwork/: Makefile  predict.py  pyproject.toml
