[tool.poetry]
name = "mlwork"
version = "0.1.0"
description = "create your own method"
authors = ["mana-ysh <int.toshi13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
mypy = "^0.770"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"